# Codeforces

./: .gitignore  CMakeLists.txt  cf_122a.cpp  cf_131a.cpp  cf_158a.cpp  cf_263a.cpp  cf_281a.cpp  cf_339.cpp  cf_4a.cpp  cf_50a.cpp  cf_58a.cpp  cf_69a.cpp  template.cpp
diff1000/: 118a_string_task.cpp  122a_lucky_division.cpp  131a_caps_lock.cpp  1a_theatre_square.cpp  230a_dragons.cpp  339b_xenia_and_ringroad.cpp  379a_new_year_candles.cpp  479a_expression.cpp  500a_new_year_transportation.cpp  579a_raising_bacteria.cpp  58a_chat_room.cpp  69a_young_physicist.cpp
diff800/: 112a_petya_and_strings.cpp  158a_next_round.cpp  231a_team.cpp  236a_boy_or_girl.cpp  263a_beautiful_matrix.cpp  266b_queue_at_school.cpp  281a_world_capitalization.cpp  282a_bit++.cpp  339a_helpful_maths.cpp  4a_watermelon.cpp  50a_domino_piling.cpp  71a_way_too_long_words.cpp
diff900/: 133a_hq9+.cpp  160a_twins.cpp  580a_kefa_and_first_steps.cpp  96a_football.cpp
